# mesh-metrics

./: README.md  pyproject.toml
.github/workflows/: ci.yml  workflow.yml
mesh-metrics/: README.md  pyproject.toml
mesh-metrics/src/mesh_metrics/: __init__.py  compare.py  evaluate.py  histogram.py  iterations.py  regions.py  remesh.py  stats.py
mesh-metrics/tests/: test_stats.py
src/mesh_metrics/: __init__.py  _plotting.py  backends.py  cli.py  demo.py  geometry.py  size_field.py  stats.py  visualize.py
tests/: test_stats.py
