[project]
name = "mesh-metrics"
version = "0.1.0"
description = "Mesh quality metrics, facet statistics, visualization, and MMG3D remeshing workflow helpers."
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Kevin-Tofu",email = "koheitech001@gmail.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "meshio>=5.3",
    "pyvista>=0.46",
    "scipy>=1.14",
]

[project.optional-dependencies]
skfem = ["scikit-fem>=11.0"]
fluxfem = ["fluxfem>=0.1"]
all = ["scikit-fem>=11.0", "fluxfem>=0.1"]

[project.scripts]
mesh-metrics = "mesh_metrics.cli:main"

[tool.poetry]
packages = [{include = "mesh_metrics", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
